# aoc_2020

./: .gitignore
aoc_13/: Cargo.toml
aoc_13/src/: main.rs
day_1/: Cargo.toml
day_1/src/: main.rs
day_10/: Cargo.toml  math.py
day_10/src/: main.rs
day_11/: Cargo.toml
day_11/src/: main.rs
day_12/: Cargo.toml
day_12/src/: main.rs  part_1.rs
day_14/: Cargo.toml
day_14/src/: main.rs
day_15/: Cargo.toml
day_15/src/: main.rs
day_16/: Cargo.toml
day_16/src/: main.rs
day_17/: Cargo.toml
day_17/src/: main.rs
day_18/: Cargo.toml
day_18/src/: main.rs
day_2/: Cargo.toml
day_2/input/: input_1.txt
day_2/src/: main.rs
day_3/: Cargo.toml
day_3/src/: main.rs
day_4/: Cargo.toml
day_4/src/: main.rs  passport.rs
day_5/: Cargo.toml
day_5/src/: boardingpass.rs  main.rs
day_6/: Cargo.toml
day_6/input/: input_1.txt
day_6/src/: main.rs
day_7/: Cargo.toml
day_7/src/: main.rs
day_8/: Cargo.toml
day_8/src/: main.rs
day_9/: Cargo.toml
day_9/src/: main.rs
